fix(billing): harden durable settlement records